Fix testimonial spacing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ strong {
   margin: 100px auto 130px auto;
   padding: 0 20px; }
 
+@media (max-width: 575.98px) {
+  .testimonial {
+    margin: 50px auto 0px auto; } }
+
 .testimonial-quote {
   display: block;
   padding: 10px 0; }
