--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -10,6 +10,12 @@
   padding: 0 20px;
 }
 
+@media (max-width: 575.98px) {
+  .testimonial {
+    margin: 50px auto 0px auto;
+  }
+}
+
 // .testimonial-avatar {
 //   width: 100px;
 //   border-radius: 50%;
